fixed horizontal scroll bug

--- a/index.css
+++ b/index.css
@@ -20,11 +20,14 @@
 	background-color: #0b0c10;
 }
 
-.fit {
-	display: inline-block;
-	width: 99vw;
+#fit {
+	width: 100vw%;
 }
 
 .height {
-	height: 93vh;
+	height: 90vh;
+}
+
+.navbar-toggler {
+	background-color: #c5c6c7;
 }
